--- a/index.html
+++ b/index.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="icon" type="image/png" href="/Images/Google-favicon.png">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
-    <nav>
-        <a href="#">About</a>
-        <a href="#">Store</a>
-        <a href="#">Gmail</a>
-        <a href="#">Images</a>
-        <img src="Images/Google-grid.png">
-        <button id="sign-in">Sign in</button>
+    <nav class="upper-text">
+        <div id="left-nav">
+            <a class="nav-items" href="#">About</a>
+            <a class="nav-items" href="#">Store</a>
+        </div>
+        <div id="right-nav">
+            <a class="nav-items right-nav-items" href="#">Gmail</a>
+            <a class="nav-items right-nav-items" href="#">Images</a>
+            <img class="nav-items right-nav-items" id="grid-button" src="Images/Google-grid.png">
+            <button id="sign-in" class="nav-items right-nav-items">Sign in</button>
+        </div>
     </nav>
-    <a href="#"><img src="Images/Googlelogo.png"></a>
-    <input type="text">
-    <button class="lowerbutton">Google Search</button>
-    <button class="lowerbutton">I'm Feeling Lucky</button>
-    <p>Google offered in: <a href="#">Français</a></p>
+    <main class="upper-text">
+        <img src="Images/Googlelogo.png">
+        <div id="search-area">
+            <input class="search-items"type="text">
+            <div id="search-buttons" class="search-items">
+                <button class="lowerbutton">Google Search</button>
+                <button class="lowerbutton">I'm Feeling Lucky</button>
+            </div>
+        </div>
+        <span class="search-items">Google offered in: <a href="#">Français</a></span>
+    </main>
     <footer>
         <div>Canada</div>
         <div>
-        <a href="#">Advertising</a>
-        <a href="#">Business</a>
-        <a href="#">How Search Works</a>
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
-        <a href="#">Settings</a>
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search Works</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
         </div>
     </footer>
 </body>
+
 </html>
