--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
-    <link rel="icon" type="image/png" href="/Images/Google-favicon.png">
+    <link rel="icon" type="image/png" href="/images/Google-favicon.png">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -19,12 +19,12 @@
         <div id="right-nav">
             <a class="nav-items right-nav-items" href="#">Gmail</a>
             <a class="nav-items right-nav-items" href="#">Images</a>
-            <img class="nav-items right-nav-items" id="grid-button" src="Images/Google-grid.png">
+            <img class="nav-items right-nav-items" id="grid-button" src="images/Google-grid.png">
             <button id="sign-in" class="nav-items right-nav-items">Sign in</button>
         </div>
     </nav>
     <main class="upper-text">
-        <img src="Images/Googlelogo.png">
+        <img src="images/Googlelogo.png">
         <div id="search-area">
             <input class="search-items"type="text">
             <div id="search-buttons" class="search-items">
