Add styling to search bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <main class="upper-text">
         <img src="images/Googlelogo.png">
         <div id="search-area">
-            <input class="search-items"type="text">
+            <!-- <img src="images/search-bar-icon.png" id="magnifying-glass"> -->
+            <input class="search-items" id="search-bar" type="text">
             <div id="search-buttons" class="search-items">
                 <button class="lowerbutton">Google Search</button>
                 <button class="lowerbutton">I'm Feeling Lucky</button>
