Add styling to footer and minor adjustments to search bar

--- a/index.html
+++ b/index.html
@@ -26,24 +26,28 @@
     <main class="upper-text">
         <img src="images/Googlelogo.png">
         <div id="search-area">
-            <!-- <img src="images/search-bar-icon.png" id="magnifying-glass"> -->
             <input class="search-items" id="search-bar" type="text">
             <div id="search-buttons" class="search-items">
                 <button class="lowerbutton">Google Search</button>
                 <button class="lowerbutton">I'm Feeling Lucky</button>
             </div>
         </div>
-        <span class="search-items">Google offered in: <a href="#">Français</a></span>
+        <span class="search-items">Google offered in: <a id="language-link" href="#">Français</a></span>
     </main>
     <footer>
-        <div>Canada</div>
-        <div>
-            <a href="#">Advertising</a>
-            <a href="#">Business</a>
-            <a href="#">How Search Works</a>
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-            <a href="#">Settings</a>
+        <div id="country">Canada</div>
+        <div class="bottom-links">
+            <div>
+                <a class="footer-items" href="#">Advertising</a>
+                <a class="footer-items" href="#">Business</a>
+                <a class="footer-items" href="#">How Search Works</a>
+            </div>
+            <div>
+                <a class="footer-items" href="#">Privacy</a>
+                <a class="footer-items" href="#">Terms</a>
+                <a class="footer-items" href="#">Settings</a>
+            </div>
+            
         </div>
     </footer>
 </body>
