Add styling to nav bar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="right-nav">
             <a class="nav-items right-nav-items" href="#">Gmail</a>
             <a class="nav-items right-nav-items" href="#">Images</a>
-            <img class="nav-items right-nav-items" id="grid-button" src="images/Google-grid.png">
-            <button id="sign-in" class="nav-items right-nav-items">Sign in</button>
+            <a href="#"><img class="nav-items right-nav-items" id="grid-button" src="images/Google-grid.png"></a>
+            <a href="#" id="sign-in" class="nav-items right-nav-items">Sign in</a>
         </div>
     </nav>
     <main class="upper-text">
