--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div id="search-area">
             <input class="search-items" id="search-bar" type="text">
             <div id="search-buttons" class="search-items">
-                <button class="lowerbutton">Google Search</button>
-                <button class="lowerbutton">I'm Feeling Lucky</button>
+                <button class="lower-button">Google Search</button>
+                <button class="lower-button">I'm Feeling Lucky</button>
             </div>
         </div>
         <span class="search-items">Google offered in: <a id="language-link" href="#">Français</a></span>
