Replace Google grid icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="right-nav">
             <a class="nav-items right-nav-items" href="#">Gmail</a>
             <a class="nav-items right-nav-items" href="#">Images</a>
-            <a href="#"><img class="nav-items right-nav-items" id="grid-button" src="images/Google-grid.png"></a>
+            <a href="#"><img class="nav-items right-nav-items" id="grid-button" src="images/Grid-icon.png"></a>
             <a href="#" id="sign-in" class="nav-items right-nav-items">Sign in</a>
         </div>
     </nav>
