Add search icon to search bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <main class="upper-text">
         <img src="images/Googlelogo.png">
         <div id="search-area">
-            <input class="search-items" id="search-bar" type="text">
+            <div id="search-field">
+                <input class="search-items" id="search-bar" type="text">
+                <img id="search-icon" src="images/Magnifying-Icon.png">
+            </div>
             <div id="search-buttons" class="search-items">
                 <a href="#" class="lower-button">Google Search</a>
                 <a href="#" class="lower-button">I'm Feeling Lucky</a>
